# cars_project

./: .gitignore  pyproject.toml
apps/auth/: urls.py
apps/users/: choices.py  managers.py  models.py  regex.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/extra_conf/: rest_conf.py
core/: pagination.py
core/dataclasses/: user_dataclass.py
